--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,12 @@ node_modules/
 # CLI (when developing the CLI)
 cli/node_modules/
 cli/dist/
+cli/ai/
+cli/docs/
+cli/prompts/
 
 # prompt-guide (added by prompt-guide-cli)
+# prompt-guide common
 # OS
 .DS_Store
 Thumbs.db
@@ -53,3 +57,15 @@ temp/
 .cache/
 # Dependencies
 node_modules/
+
+# prompt-guide (Web)
+# Build output
+dist/
+.next/
+out/
+.nuxt/
+.output/
+.vuepress/dist
+.parcel-cache/
+.vite/
+*.local
