--- a/cli/package.json
+++ b/cli/package.json
@@ -16,15 +16,24 @@
   "engines": {
     "node": ">=18"
   },
+  "files": [
+    "bin",
+    "dist",
+    "ai",
+    "docs",
+    "prompts"
+  ],
   "scripts": {
     "build": "tsc",
     "start": "node dist/cli.js",
     "dev": "tsx src/cli.ts",
-    "prepublishOnly": "npm run build"
+    "copy-templates": "node scripts/copy-templates.cjs",
+    "prepublishOnly": "npm run copy-templates && npm run build"
   },
   "dependencies": {
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
+    "figlet": "^1.10.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
