--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "scripts": {
     "build": "npm run build -w prompt-guide-cli",
     "init": "node cli/bin/cli.js init",
-    "cli": "node cli/bin/cli.js"
+    "cli": "FORCE_COLOR=1 node cli/bin/cli.js"
   }
 }
