--- a/prompts/rules.by-platform.yml
+++ b/prompts/rules.by-platform.yml
@@ -1,59 +1,59 @@
-# 플랫폼별 추가 규칙 (포크 시 해당 플랫폼만 사용. 여러 개면 병합)
-# 도구: platforms.<이름>.prompt 사용. 사람 읽기: docs/rules-by-platform.md
+# Per-platform rules (when forking, use only the relevant platform(s); merge if multiple)
+# Tools: use platforms.<name>.prompt. Human-readable: docs/rules-by-platform.md
 
 meta:
   strict: true
-  usage: "system.core + 선택한 플랫폼 prompt 병합"
+  usage: "system.core + selected platform prompt merged"
 
 platforms:
   ios:
     name: iOS
     stack: Swift / SwiftUI / UIKit
     prompt: |
-      ## iOS (필수 추가 규칙)
-      MUST: Swift 네이밍·들여쓰기·옵셔널·에러 처리 프로젝트 스타일 가이드 준수. 의존성 Podfile·SPM·Carthage lock 유지. 임의 버전 변경 금지.
-      MUST: UI 접근성(VoiceOver·Dynamic Type), 다크모드·다국어 반드시 고려. UI 업데이트는 메인 스레드만.
-      MUST NOT: 비밀을 코드·plist에 저장. Keychain·env만 사용. 로그에 PII·토큰 포함 금지.
+      ## iOS (required additional rules)
+      MUST: Follow project style for Swift naming, indentation, optionals, and error handling. Keep Podfile, SPM, or Carthage lock; do not change versions arbitrarily.
+      MUST: Consider UI accessibility (VoiceOver, Dynamic Type), dark mode, and localization. UI updates on main thread only.
+      MUST NOT: Store secrets in code or plist. Use Keychain or env only. No PII or tokens in logs.
 
   android:
     name: Android
     stack: Kotlin / Java
     prompt: |
-      ## Android (필수 추가 규칙)
-      MUST: Kotlin/Java 코딩 컨벤션·패키지 구조 준수. 의존성 Gradle·버전 카탈로그 일치. 임의 버전 변경 금지.
-      MUST: a11y(contentDescription·TalkBack), 설정·다국어·테마 반드시 고려. UI 작업은 Main dispatcher만.
-      MUST NOT: 비밀을 코드·리소스에 저장. Keystore·BuildConfig/환경변수만 사용. 로그·크래시 리포트에 PII 포함 금지.
+      ## Android (required additional rules)
+      MUST: Follow Kotlin/Java conventions and package layout. Keep Gradle and version catalog in sync; do not change versions arbitrarily.
+      MUST: Consider a11y (contentDescription, TalkBack), settings, localization, themes. UI work on Main dispatcher only.
+      MUST NOT: Store secrets in code or resources. Use Keystore, BuildConfig, or env. No PII in logs or crash reports.
 
   flutter:
     name: Flutter
     stack: Dart
     prompt: |
-      ## Flutter (필수 추가 규칙)
-      MUST: effective_dart·프로젝트 분석 옵션 준수. 의존성 pubspec.lock·버전 범위 유지. 임의 변경 금지.
-      MUST: 접근성(Semantics·라벨), 반응형·다국어 반드시 고려. 비동기는 async/await·Future. UI는 build 내 동기만.
-      MUST NOT: 비밀을 코드에 저장. flutter_dotenv·--dart-define·네이티브 시크릿만 사용. 로그에 비밀·PII 포함 금지.
+      ## Flutter (required additional rules)
+      MUST: Follow effective_dart and project analysis options. Keep pubspec.lock and version ranges; do not change arbitrarily.
+      MUST: Consider accessibility (Semantics, labels), responsive layout, localization. Use async/await and Future for async; keep build synchronous.
+      MUST NOT: Store secrets in code. Use flutter_dotenv, --dart-define, or native secrets. No secrets or PII in logs.
 
   web:
     name: Web
-    stack: JS/TS · React/Vue/Svelte 등
+    stack: JS/TS · React/Vue/Svelte etc.
     prompt: |
-      ## Web (필수 추가 규칙)
-      MUST: 프로젝트 프레임워크·번들러·lint 규칙 준수. 의존성 package-lock·yarn.lock·pnpm-lock 유지. 임의 변경 금지.
-      MUST: a11y(시맨틱·ARIA·키보드·포커스), 반응형·i18n 반드시 고려. CSR/SSR·hydration 일관 유지.
-      MUST NOT: 비밀을 클라이언트 코드·빌드 산출물에 포함. env·빌드 시 주입만. XSS·CORS·CSP 반드시 고려. 로그·에러에 PII 포함 금지.
+      ## Web (required additional rules)
+      MUST: Follow project framework, bundler, and lint rules. Keep package-lock, yarn.lock, or pnpm-lock; do not change arbitrarily.
+      MUST: Consider a11y (semantics, ARIA, keyboard, focus), responsive layout, i18n. Keep CSR/SSR and hydration consistent.
+      MUST NOT: Ship secrets in client code or build output. Use env or build-time injection. Consider XSS, CORS, CSP. No PII in logs or errors.
 
   server:
     name: Server
-    stack: Node/Go/Rust/Java/Python 등
+    stack: Node/Go/Rust/Java/Python etc.
     prompt: |
-      ## Server (필수 추가 규칙)
-      MUST: 프로젝트 컨벤션·디렉터리 구조 준수. 의존성 lockfile·go.sum·Cargo.lock·requirements.txt 등 유지. 임의 변경 금지.
-      MUST: API 응답 형식 통일(예: { success, data?, error? }). HTTP 2xx/4xx/5xx·타임아웃·rate limit 반드시 적용. 장시간 작업은 queue·백그라운드만.
-      MUST NOT: 비밀을 코드에 저장. env·시크릿 매니저만 사용. 입력 검증·인증·권한 생략 금지. 로그에 비밀·PII 포함 금지.
+      ## Server (required additional rules)
+      MUST: Follow project conventions and directory layout. Keep lockfile, go.sum, Cargo.lock, requirements.txt, etc.; do not change arbitrarily.
+      MUST: Use a consistent API response shape (e.g. { success, data?, error? }). Apply HTTP 2xx/4xx/5xx, timeouts, rate limits. Long work in queue/background only.
+      MUST NOT: Store secrets in code. Use env or a secret manager. Do not skip input validation, auth, or authorization. No secrets or PII in logs.
 
   common:
-    name: 공통
+    name: Common
     prompt: |
-      ## 공통 (모든 플랫폼 필수)
-      MUST: 공개 API/유틸에 단위 테스트 추가. 테스트명은 "조건→기대결과". mock은 외부 의존성만.
-      MUST: 커밋 "동사+대상". 1커밋=1논리변경. PR에 이유·테스트 방법·breaking 여부 반드시 기재.
+      ## Common (all platforms, required)
+      MUST: Add unit tests for public API and utilities. Test names: "condition → expected". Mock only external dependencies.
+      MUST: Commits: "verb + object". One commit = one logical change. PRs must state reason, how to test, and whether there are breaking changes.
