Update Prompt guide package name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-# Publish prompt-guide-cli to npm when a version tag (v*) is pushed.
+# Publish @pelagornis/prompt-guide to npm when a version tag (v*) is pushed.
 # Required: Add NPM_TOKEN (npm Automation token from https://www.npmjs.com/account/tokens) to repo Secrets.
 name: Release to npm
 
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   publish:
-    name: Publish prompt-guide-cli to npm
+    name: Publish @pelagornis/prompt-guide to npm
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -28,13 +28,13 @@ jobs:
         run: |
           TAG="${GITHUB_REF#refs/tags/}"
           VERSION="${TAG#v}"
-          npm version "$VERSION" --no-git-tag-version --allow-same-version -w prompt-guide-cli
-          echo "Publishing prompt-guide-cli@$VERSION"
+          npm version "$VERSION" --no-git-tag-version --allow-same-version -w @pelagornis/prompt-guide
+          echo "Publishing @pelagornis/prompt-guide@$VERSION"
 
       - name: Install dependencies
         run: npm ci
 
       - name: Publish to npm
-        run: npm publish -w prompt-guide-cli --access public
+        run: npm publish -w @pelagornis/prompt-guide --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_RELEASE_TOKEN }}
